--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
                   <h1 class="modal-title fs-5" id="mealDetailsLabel">Modal title</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                  ...
+                <div id="mealdetailsBody" class="modal-body">
+         
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Understood</button>
                 </div>
               </div>
             </div>
